--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,15 @@ android {
             path "CMakeLists.txt"
         }
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a', 'x86_64'
+            universalApk true
+        }
+    }
 }
 
 dependencies {
